[tool.poetry]
name = "authx-playground"
version = "0.1.0"
description = ""
authors = ["Alexey Berezin <aliaksei.biarezin@ai-sft.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
authx = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
