[tool.poetry]
name = "authx-playground"
version = "0.1.0"
description = ""
authors = ["Alexey Berezin <aliaksei.biarezin@ai-sft.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
authx = "^1.4.0"
uvicorn = "^0.32.1"
authx-extra = "^1.1.4"
httpx = "^0.28.1"
google-auth = "^2.36.0"
requests = "^2.32.3"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
